  This is needed in the lazy functionality.
  Modified file: boost/phoenix/function/function.hpp

  Revised version of lazy functionality with added functions.
  Modified files in boost/phoenix/function:
    lazy_operator.hpp lazy_prelude.hpp lazy_reuse.hpp
  New files:
    lazy_signature.hpp lazy_smart.hpp
  New test files:
    lazy_compose_tests.cpp lazy_fold_tests.cpp lazy_scan_tests.cpp

- V3.2.0 - in Boost 1.58.0

- patch for #10927 in test/stdlib/cmath.cpp
- patch for #11085 in test/function/function_tests.cpp

- Bump version number to 3.2.0 in version.hpp.

- New header files in boost/phoenix/function
  These are the first versions of the lazy functionality being introduced.
  This is reimplementation of the ideas in FC++ on top of Phoenix.
  The Phoenix code used is Phoenix.Function, along with Boost.Function.
  lazy_prelude.hpp  This is the top level header and also has prelude functions.
  lazy_operator.hpp This defines lazy operators such as plus and minus.
  lazy_list.hpp     This defines list<T> a lazy list class and associated code.
  lazy_reuser.hpp   This defines the reuser functions used in the code.

- New tests for lazy functionality.
  test/include/function/lazy_headers Test of the header structure.
  test/function/lazy_list_tests      Simple tests of list<T>.
  test/function/lazy_list2_tests     More tests of list<T>.
- Develop documentation for version 3.2.0
  This includes a new section on the lazy list implementation.

- Fixed name clash by renaming 'at' to be 'at_' because the name 'at' is
  used in phoenix/stl/container/container.hpp.

- Fixed an unused typedef in phoenix/scope/let.hpp
  - contributed by Kohei Takahashi

- V3.1.1

- Bump version number to 3.1.1 in version.hpp and branch for release.

- New tests for lazy functions using existing phoenix/function capability.
  lazy_argument_tests, lazy_make_pair_tests, lazy_templated_struct_tests

- New example bind_goose.cpp comparing boost.bind and boost.phoenix.bind.
