@@ -61,6 +61,7 @@
 [def __boost_result_of__ [@http://www.boost.org/doc/libs/release/libs/utility/utility.htm#result_of Boost.Result Of]]
 [def __phoenix_starter_kit__ [link phoenix.starter_kit Starter Kit]]
 [def __phoenix_modules__ [link phoenix.modules Modules]]
+[def __phoenix_local_variable__ [link phoenix.modules.scope.local_variables Local Variables]]
 [def __phoenix_actions__ [link phoenix.inside.actions Actions]]
 [def __phoenix_custom_terminals__ [link phoenix.inside.custom_terminals Custom Terminals]]
 [def __phoenix_placeholder_unification__ [link phoenix.inside.placeholder_unification Placeholder Unification]]
